# MorPhoto

./: .gitignore  MorPhoto.code-workspace  README.md
.github/: pull_request_template.md
.github/workflows/: build-check-client.yaml  build-check-ml.yaml  build-check-server.yaml
client/: .env.development  .eslintignore  .eslintrc.json  .prettierignore  Dockerfile  README.md  docker-compose.yaml  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
client/.config/: gcs-cors.json
client/.husky/: pre-commit
client/.storybook/: main.ts  preview.ts
client/src/api/: index.ts
client/src/api/core/: api-client.ts  index.ts
client/src/api/gcs/: index.ts
client/src/api/image/: upload.ts
client/src/app/: globals.css  layout.tsx  page.module.css  page.tsx  robots.ts  sitemap.ts
client/src/constants/: env.ts
client/src/types/: Morphoto.d.ts
client/src/ui/: index.ts
client/src/utils/: gcs-image.ts  index.ts
morphoto/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
morphoto/configs/: config.py
morphoto/src/: download_model.py  filter.py  image_converter.py  main.py  models.py  morphoto.py  prompt_converter.py  translator.py
morphoto/src/configs/: __init__.py  config.py
morphoto/tests/: _test_inference.py  test_filter.py  test_prompt_conversion.py  test_tranlator.py
server/: .editorconfig  .gitignore  README.md  fake.sh  global.json
server/.config/: dotnet-tools.json
server/api/: api.sln
server/api/Api/: Api.fsproj  Dockerfile  Domain.fs  Infra.fs  Program.fs  Service.fs
server/api/Api.Test/: Api.Test.fsproj  Tests.fs
server/api/Test/: Test.fsproj
server/docker/: docker-compose.local.database.yaml  docker-compose.local.ml.yaml  docker-compose.local.server.yaml  docker-compose.local.yaml
(+159 files in other folders)
